--- a/css/main.css
+++ b/css/main.css
@@ -571,7 +571,10 @@ body {
 }
 @media screen and (min-width: 1050px), print {
   .header-nav {
-    padding: 16px 16px;
+    padding: 20px;
+    border: 1px solid rgb(229, 229, 228);
+    border-bottom-width: 0px;
+    border-top-width: 2px;
   }
 }
 
@@ -628,7 +631,7 @@ body {
     z-index: 20;
     margin: 24px 0 0;
     border: solid #e5e5e4;
-    border-width: 1px 0 0;
+    border-width: 1px;
     text-align: center;
   }
 }
@@ -729,7 +732,7 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .header__box {
-    font-weight: 700;
+    padding: 0px;
   }
 }
 
@@ -748,13 +751,21 @@ body {
 .header__box-item {
   margin-right: 20px;
   letter-spacing: 1.99px;
+  color: #feffd6;
+}
+@media screen and (min-width: 1200px) {
+  .header__box-item {
+    font-size: 22px;
+  }
 }
 
 .header__box-item:hover {
   background-color: rgba(249, 234, 225, 0.8901960784);
   color: #232532;
   padding: 0px 10px 0px;
-  font-weight: 900;
+  letter-spacing: 1.99px;
+  font-weight: 800;
+  font-size: 22px;
 }
 
 .header-nav__logo {
@@ -802,6 +813,27 @@ body {
   }
 }
 
+.background {
+  background-image: linear-gradient(45deg, rgb(255, 255, 255) 0%, rgba(41, 47, 143, 0.82) 100%), url(../../img/delivery.webp);
+}
+
+.p__font {
+  color: #000;
+  font-size: 20px;
+  font-weight: 600;
+  letter-spacing: 1.1px;
+  line-height: 1.5;
+  font-weight: 900;
+}
+
+.h1__font {
+  font-size: 30px;
+  /* margin-top: 30px; */
+  margin-bottom: 25px;
+  font-weight: 800;
+  color: #feffd6;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -823,7 +855,6 @@ body {
   background: rgb(134, 214, 249);
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   padding: 25px;
-  border-radius: 25px;
   min-height: 300px;
   transition: all 0.3s;
 }
@@ -1145,7 +1176,7 @@ nav {
 
 .nav__flex {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
@@ -1162,9 +1193,12 @@ nav {
 
 .footer__main {
   padding: 25px;
-  /*   border-top: 3px solid #fff;
-   */
   box-shadow: 0 2px 8px rgba(229, 229, 228, 0.25), 0 5px 10px rgba(229, 229, 228, 0.22);
+}
+@media screen and (min-width: 1200px) {
+  .footer__main {
+    padding: 25px 100px;
+  }
 }
 
 .footer__menu-mb {
@@ -1174,8 +1208,9 @@ nav {
 @media screen and (min-width: 1200px) {
   .footer__menu-mb {
     margin-top: 0px;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 500px;
+    margin-left: -40px;
   }
 }
 
