--- a/sass/layout/_styles.scss
+++ b/sass/layout/_styles.scss
@@ -328,7 +328,11 @@ body {
   color: #feffd6;
 
   @media screen and (min-width: 1050px), print {
-    padding: 16px 16px;
+    padding: 20px;
+    border: 1px solid rgb(229, 229, 228);
+    border-bottom-width: 0px;
+    border-top-width: 2px;
+
   }
 }
 
@@ -381,7 +385,7 @@ body {
     z-index: 20;
     margin: 24px 0 0;
     border: solid #e5e5e4;
-    border-width: 1px 0 0;
+    border-width: 1px;
     text-align: center;
   }
 }
@@ -483,7 +487,7 @@ body {
   font-weight: 900;
 
   @media screen and (min-width: 1200px) {
-    font-weight: 700;
+        padding: 0px;
 }
 }
 
@@ -501,13 +505,19 @@ body {
 .header__box-item {
   margin-right: 20px;
   letter-spacing: 1.99px;
+  color: #feffd6;
+  @media screen and (min-width: 1200px) {
+      font-size: 22px;
+  }
 }
 
 .header__box-item:hover {
   background-color: #f9eae1e3;
   color: #232532  ;
   padding: 0px 10px 0px;
-  font-weight: 900;
+ letter-spacing: 1.99px;
+  font-weight: 800;
+  font-size: 22px;
 }
 
 .header-nav__logo{
@@ -549,4 +559,25 @@ body {
   @media screen and (min-width: 1200px) {
     font-size: 18px;
   }
+}
+
+.background {
+  background-image: linear-gradient(45deg, rgb(255 255 255) 0%, rgb(41 47 143 / 82%) 100%), url(../../img/delivery.webp);
+}
+
+.p__font {
+  color: #000;
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 1.1px;
+    line-height: 1.5;
+    font-weight: 900;
+}
+
+.h1__font {
+  font-size: 30px;
+    /* margin-top: 30px; */
+    margin-bottom: 25px;
+    font-weight: 800;
+    color: #feffd6;
 }
