--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -34,10 +34,11 @@ nav {
 }
 
   .link-3:hover {
-    background-color: #f9eae1e3;
-    color: #232532  ;
-    padding: 15px 10px;
-    font-weight: 600;
+/*     background-color: #f9eae1e3;
+ */    color: #e0eba5  ;
+    padding: 0px 10px;
+    /* font-weight: 600; */
+    transition: 0s;
   }
 
   .footer-active {
