--- a/sass/layout/_styles.scss
+++ b/sass/layout/_styles.scss
@@ -509,12 +509,12 @@ body {
 }
 
 .header__box-item:hover {
-  background-color: #f9eae1e3;
-  color: #232532  ;
-  padding: 0px 10px 0px;
- letter-spacing: 1.99px;
-  font-weight: 800;
-  font-size: 22px;
+/*   background-color: #f9eae1e3;
+ */  color: #e0eba5  ;
+/*   padding: 0px 10px 0px;
+ */ letter-spacing: 1.99px;
+/*   font-weight: 800;
+ */  font-size: 22px;
 }
 
 .header-nav__logo{
