--- a/sass/layout/_styles.scss
+++ b/sass/layout/_styles.scss
@@ -321,14 +321,15 @@ body {
   padding: 16px 16px;
   background-color: initial;
   /* border-bottom: 2px solid #e5e5e4; */
-  margin-bottom: -25px;
-  color: #feffd6;
+  margin-bottom: 0px;  color: #feffd6;
 
   @media screen and (min-width: 1050px), print {
     padding: 20px;
     border: 1px solid rgb(229, 229, 228);
     border-bottom-width: 0px;
     border-top-width: 2px;
+    margin-bottom: -25px;
+    
 
   }
 }
@@ -559,7 +560,13 @@ body {
 }
 
 .background {
-  background-image: linear-gradient(45deg, rgb(255 255 255) 0%, rgb(41 47 143 / 82%) 100%), url(../../img/delivery.webp);
+  background-image: linear-gradient(45deg, rgb(245 245 245) 0%, rgba(41, 47, 143, 0.82) 100%), url(../../img/delivery.webp);
+}
+
+.background2 {
+  background-image: linear-gradient(45deg, rgb(255 255 255) 0%, rgb(41 47 143 / 82%) 100%), url(../../img/GDPR.webp);
+  height: auto!important;
+  background-repeat: no-repeat;
 }
 
 .p__font {
