--- a/sass/layout/_styles.scss
+++ b/sass/layout/_styles.scss
@@ -190,9 +190,10 @@
 }
 
 .price-prod2 {
-  color: #000;
-  font-weight: 600;
+  color: #feffd6;
+  font-weight: 500;
   font-size: xx-large;
+  text-align: center;
 }
 
 .heading-prod {
@@ -202,11 +203,15 @@
   justify-content: center;
   align-items: center;
   font-weight: 600;
+  text-align: center;
 }
 
 .heading-prod2 {
   font-size: xx-large;
   color: #fff;
+  font-weight: 600;
+  text-align: center;
+  padding-right: 0px;
 }
 
 .card-color {
@@ -585,4 +590,11 @@ body {
     font-weight: 800;
     color: #feffd6;
     text-transform: uppercase;
+}
+
+.prod__form {
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
